# geosphere-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: auto-release.yml  release.yml  validate.yml
docs/: README.md
docs/domain/: OVERVIEW.md  README.md
docs/tech/: ARCHITECTURE.md  CONVENTIONS.md  README.md  TECH-STACK.md  TESTING.md
src/geosphere_mcp_server/: __init__.py  condition.py  const.py  format.py  geosphere_api.py  openmeteo_api.py  server.py  weather.py
tests/: __init__.py  test_condition.py  test_format.py  test_geosphere_api.py  test_integration.py  test_openmeteo_api.py  test_server.py  test_weather.py
