[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "geosphere-mcp-server"
dynamic = ["version"]
description = "MCP server for weather forecasts: GeoSphere Austria high-resolution data (AROME/INCA/C-LAEF) for Austria and the Alps, Open-Meteo worldwide."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Stefan Lettmayer" }]
keywords = [
    "mcp",
    "weather",
    "geosphere",
    "austria",
    "forecast",
    "open-meteo",
    "home-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.28.1",
    "aiohttp>=3.0.0",
    "astral>=3.2",
]

[project.urls]
Homepage = "https://github.com/slettmayer/geosphere-mcp-server"
Repository = "https://github.com/slettmayer/geosphere-mcp-server"
Issues = "https://github.com/slettmayer/geosphere-mcp-server/issues"
Changelog = "https://github.com/slettmayer/geosphere-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
geosphere-mcp-server = "geosphere_mcp_server.server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/geosphere_mcp_server/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/geosphere_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests hitting live APIs, deselect with -m 'not integration'",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
